--- a/Ansible/Ansible Configuration/ansible.config
+++ b/Ansible/Ansible Configuration/ansible.config
@@ -1,8 +1,8 @@
-### cd ~/.ssh
-### cd /etc/ansible/	
-### nano ansible.cfg or nano ansible.cfg
-###	CTRL + W > enter remote_user
-### change remote_user = azdmin 
+# cd ~/.ssh
+# cd /etc/ansible/	
+# nano ansible.cfg or nano ansible.cfg
+#	CTRL + W > enter remote_user
+# change remote_user = azdmin 
 
 # config file for ansible -- https://ansible.com/
 # ===============================================
